cambio de committed
prueba de control de cambios

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 
 <body>
   <script src="js/scripts.js"></script>
-  <div> diplomado de desarrollo </div>
+  <h1> diplomado de desarrollo de aplicaciones moviles </h1>
 </body>
 </html>
